--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
-[tool.setuptools]
-license-files = []
-
 [metadata]
 name = AndroidsSystemFileChooser
 version = 0.0.3
@@ -9,6 +6,7 @@ description = Androids SystemFileChooser with Kivy
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/kuzeyron/AndroidsSystemFileChooser
+license = LICENSE
 classifiers =
     Intended Audience :: Developers
     Topic :: Software Development :: Build Tools
