--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
       - name: Install dependencies
-        run: python -m pip install --upgrade setuptools wheel twine
+        run: python -m pip install --upgrade packaging setuptools wheel twine
       - name: Build
         run: |
           python setup.py sdist bdist_wheel
