--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,3 +21,5 @@ jobs:
           verbose: true
           user: __token__
           password: ${{ secrets.pypi_password }}
+    permissions:
+      id-token: write
