--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = AndroidsSystemFileChooser
 version = 0.0.3
 author = Mathias Lindström
-description = Androids SystemFileChooser with Kivy
+description = Android's SystemFileChooser with Kivy
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/kuzeyron/AndroidsSystemFileChooser
