--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,5 +21,8 @@ jobs:
           verbose: true
           user: __token__
           password: ${{ secrets.pypi_password }}
+    environment:
+      name: pypi
+      url: https://pypi.org/p/AndroidsSystemFileChooser
     permissions:
       id-token: write
