--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = AndroidsSystemFileChooser
-version = 0.0.8
+version = 0.0.1
 author = Mathias Lindström
-description = Android's SystemFileChooser with Kivy
+description = Androids SystemFileChooser with Kivy
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/kuzeyron/AndroidsSystemFileChooser
